<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_events"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Events" />

    <item
        android:id="@+id/nav_create_events"
        android:icon="@android:drawable/ic_input_add"
        android:title="Create Events" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="Profile" />

</menu>

